[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kraky"
version = "2023.08.17"
description = "Python client for Kraken API REST and Kraken Websockets API using httpx and websockets. Supports both sync and async for API REST."
authors = [{ name = "Atem18", email = "contact@atemlire.io" }]
license = { file = "LICENSE" }
readme = "README.md"
homepage = "https://kraky.readthedocs.io/en/latest"
repository = "https://github.com/Atem18/kraky"
keywords = ["asyncio", "httpx", "websockets", "kraken"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "httpx == 0.26.0",
    "websockets == 12.0",
    "typer == 0.10.0",
    "python-dotenv == 1.0.1",
]

[project.optional-dependencies]
dev = ["pre-commit == 3.6.0", "ruff == 0.2.1", "mypy == 1.8.0"]

doc = [
    "mkdocs == 1.5.3",
    "mkdocs-material == 9.5.14",
    "mkdocstrings == 0.24.0",
    "mkdocstrings-python == 1.8.0",
]

test = ["pytest == 8.1.1", "pytest-asyncio == 0.23.5.post1", "tox == 4.12.1"]

build = ["hatch == 1.9.3"]

[project.scripts]
kraky = 'kraky.cli:app'
