[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kraky"
version = "2023.08.17"
description = "Python client for Kraken API REST and Kraken Websockets API using httpx and websockets. Supports both sync and async for API REST."
authors = [{ name = "Atem18", email = "contact@atemlire.io" }]
license = { file = "LICENSE" }
readme = "README.md"
homepage = "https://kraky.readthedocs.io/en/latest"
repository = "https://github.com/Atem18/kraky"
keywords = ["asyncio", "httpx", "websockets", "kraken"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "httpx == 0.27.0",
    "websockets == 12.0",
    "typer == 0.12.3",
    "python-dotenv == 1.0.1",
]

[project.optional-dependencies]
dev = ["pre-commit == 3.7.1", "ruff == 0.4.7", "mypy == 1.8.0"]

doc = [
    "mkdocs == 1.6.0",
    "mkdocs-material == 9.5.30",
    "mkdocstrings == 0.25.2",
    "mkdocstrings-python == 1.10.5",
]

test = ["pytest == 8.2.2", "pytest-asyncio == 0.23.8", "tox == 4.15.1"]

build = ["hatch == 1.12.0"]

[project.scripts]
kraky = 'kraky.cli:app'
